--- a/DinDin Food App/CartModule/CartView/CartTableViewCell.xib
+++ b/DinDin Food App/CartModule/CartView/CartTableViewCell.xib
@@ -1,21 +1,98 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CartTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="97" id="KGk-i7-Jjw" customClass="CartTableViewCell" customModule="DinDin_Food_App" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vrh-DZ-kuo">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ss2-Bh-94M">
+                                <rect key="frame" x="8" y="22.5" width="55" height="55"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="OqX-KF-Ri5"/>
+                                    <constraint firstAttribute="width" constant="55" id="UyJ-vK-GcF"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvs-8F-Wto">
+                                <rect key="frame" x="73" y="37.5" width="130" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="kSk-ZL-sbf"/>
+                                    <constraint firstAttribute="width" constant="130" id="lfL-Jy-Tbg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EaH-Qo-rQc">
+                                <rect key="frame" x="204" y="37.5" width="60" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="VvN-gS-ou2"/>
+                                    <constraint firstAttribute="height" constant="25" id="h1R-wi-bGg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BxQ-NL-0Sj">
+                                <rect key="frame" x="278" y="35" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="EIM-p8-C2W"/>
+                                    <constraint firstAttribute="width" constant="30" id="dO1-Ps-1CW"/>
+                                </constraints>
+                                <state key="normal" image="cancel"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ss2-Bh-94M" firstAttribute="centerY" secondItem="vrh-DZ-kuo" secondAttribute="centerY" id="4nL-CI-VPu"/>
+                            <constraint firstItem="BxQ-NL-0Sj" firstAttribute="leading" secondItem="EaH-Qo-rQc" secondAttribute="trailing" constant="14" id="Lwe-Bo-iUU"/>
+                            <constraint firstItem="EaH-Qo-rQc" firstAttribute="centerY" secondItem="vrh-DZ-kuo" secondAttribute="centerY" id="SPE-fC-kR6"/>
+                            <constraint firstItem="ss2-Bh-94M" firstAttribute="leading" secondItem="vrh-DZ-kuo" secondAttribute="leading" constant="8" id="ZA2-Z7-bku"/>
+                            <constraint firstItem="hvs-8F-Wto" firstAttribute="centerY" secondItem="vrh-DZ-kuo" secondAttribute="centerY" id="bGm-xG-kmK"/>
+                            <constraint firstAttribute="trailing" secondItem="BxQ-NL-0Sj" secondAttribute="trailing" constant="12" id="moY-hG-efh"/>
+                            <constraint firstItem="BxQ-NL-0Sj" firstAttribute="centerY" secondItem="vrh-DZ-kuo" secondAttribute="centerY" id="qfE-PC-3GK"/>
+                            <constraint firstAttribute="width" constant="320" id="sfr-B5-yLj"/>
+                            <constraint firstItem="hvs-8F-Wto" firstAttribute="leading" secondItem="ss2-Bh-94M" secondAttribute="trailing" constant="10" id="tz9-af-T7L"/>
+                            <constraint firstAttribute="height" constant="100" id="uD9-V4-m5l"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="vrh-DZ-kuo" secondAttribute="bottom" id="923-bG-g7h"/>
+                    <constraint firstAttribute="trailing" secondItem="vrh-DZ-kuo" secondAttribute="trailing" id="gSY-68-evj"/>
+                    <constraint firstItem="vrh-DZ-kuo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="hWd-we-Hzf"/>
+                    <constraint firstItem="vrh-DZ-kuo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="zUF-Ea-99z"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="cancelOrder" destination="BxQ-NL-0Sj" id="Nkj-Jd-4My"/>
+                <outlet property="orderName" destination="hvs-8F-Wto" id="UFj-15-4aR"/>
+                <outlet property="orderPrice" destination="EaH-Qo-rQc" id="dxe-3h-33h"/>
+                <outlet property="orderThumbnail" destination="ss2-Bh-94M" id="b7w-4n-cTv"/>
+            </connections>
+            <point key="canvasLocation" x="2.8985507246376816" y="109.82142857142857"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="cancel" width="16.666666030883789" height="16.666666030883789"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
